examples/poc/manifests/ext-proc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server-deployment
  labels:
    app: grpc-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-server
  template:
    metadata:
      labels:
        app: grpc-server
    spec:
      containers:
      - name: grpc-server
        image: # Image built from the Dockerfile in ./ext-proc
        args:
        #TODO: specify label selector and dynamically update pods
        - -pods
        - "vllm-575d76dbfc-l4w5z"
        - -podIPs
        - "10.100.0.7:8000"
        - -enable-fairness
        - "true"
        ports:
        - containerPort: 9002
      - name: curl
        image: curlimages/curl
        command: ["sleep", "3600"]
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-server-service
spec:
  selector:
    app: grpc-server
  ports:
    - protocol: TCP
      port: 9002
      targetPort: 9002
  type: ClusterIP

#TODO: specify label selector and dynamically update pods
# ---
# kind: ClusterRole
# apiVersion: rbac.authorization.k8s.io/v1
# metadata:
#   name: pod-read
# rules:
# - apiGroups: [""]
#   resources: ["pods"]
#   verbs: ["get", "watch", "list"]
# --- 
# kind: ClusterRoleBinding
# apiVersion: rbac.authorization.k8s.io/v1
# metadata:
#   name: pod-read-binding
# subjects:
# - kind: ServiceAccount
#   name: default
#   namespace: default
# roleRef:
#   kind: ClusterRole
#   name: pod-read
