examples/poc/manifests/installation.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: llm-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:  
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: llm-route-envoy-config
    namespace: default
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyExtensionPolicy
metadata:
  name: ext-proc-policy
  namespace: default
spec:
  extProc:
    - backendRefs:
      - group: ""
        kind: Service
        name: grpc-server-service
        port: 9002
      processingMode:
        request:
          body: Buffered
        response:
      messageTimeout: 5s
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: inference-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-route-ext-proc
  namespace: default
  labels:
    app: llm-route-ext-proc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llm-route-ext-proc
  template:
    metadata:
      labels:
        app: llm-route-ext-proc
    spec:
      containers:
      - name: llm-route-ext-proc
        image: ghcr.io/tomatillo-and-multiverse/ext-proc:demo
        args:
        #TODO: specify label selector and dynamically update pods
        - -pods
        - "vllm-78665f78c4-h4kx4,vllm-78665f78c4-hnz84"
        - -podIPs
        - "10.24.11.6:8000,10.24.5.7:8000"
        - -enable-fairness
        - "false"
        ports:
        - containerPort: 9002
      - name: curl
        image: curlimages/curl
        command: ["sleep", "3600"]
---
apiVersion: v1
kind: Service
metadata:
  name: llm-route-ext-proc
  namespace: default
spec:
  selector:
    app: llm-route-ext-proc
  ports:
    - protocol: TCP
      port: 9002
      targetPort: 9002
  type: ClusterIP
